# hacker-de-audio-de-teclado

./: README.md  fix_teclahacker.py  gerar_exemplo_zorro.py  hacker_de_teclado.py  keystroke_model_best.pth  pyproject.toml  quickstart.py  teclahacker.py  test_onset.py
